# 3on3bot

./: .dockerignore  .gitignore  .travis.yml  20152016schedule.json  Dockerfile  Pipfile  README.md  README.rst  app.js  app.py  bower.json  coming_soon.html  config.js  config.py  container.py  critical_LAK.json  hashtags.json  ot_SJS.json  ot_test.html  package.json  pyproject.toml  requirements.txt  run.py  run_bot.py  schedule.json  scraper.js  script.py  server.js  team_video_info.csv  test.html  things.txt  tweeter.js  tweeter.py  tweeter_v2.py  videoUrlStuff.txt  videoUrls.txt
.circleci/: config.yml
3on3bot/: __init__.py  hashtags.json  messages.py  teams.py  tweet.py
app/: __init__.py  app.py  models.py  scraper.js  script.py  server.js  tweeter.js  tweeter.py  views.py
app/models/: Game.js
app/schema/: gameSchema.js
app/static/: app.js  config.js
app/static/js/components/: main.jsx
app/templates/: index.html
app/utilities/: container.js  scraper.js  tweeter.js
app/utils/: container.js  scraper.js  tweeter.py
app/views/: admin.py  index.py
bot/: app.py  client.py  config.py  constants.py  games.py  messages.py  run.py  scheduler.py  teams.py  tweet.py  utils.py
coming_soon/: indedx.html  index.html
coming_soon/static/: coming_soon.css
data/: sample_games.json
notebooks/: Examples.ipynb
sample_data/: critical_LAK.json
tests/: mock_games.py  mock_tweet.py  test_3on3bot.py  test_games.py  test_tweet.py  test_utils.py
