[tool.poetry]
name = "3on3bot"
version = "0.1.0"
description = ""
authors = ["Brett LaBombarda <bplabombarda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
tweepy = "^3.7"
pyyaml = "^3.13"
jupyter = "^1.0"
jupyterthemes = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
